# mail-service-api

./: Cargo.toml
src/: client.rs  lib.rs  request.rs  response.rs
