[package]
name = "mail-service-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
strum = { version = "^0.21", features = ["derive"] }

# these deps are needed when building a client
reqwest = { version = "^0.11", features = ["json"], optional = true }
tokio = { version = "^1.12", features = ["full"], optional = true }

[features]
client = ["reqwest", "tokio"]
# for dev purposes
default = ["client"]
